--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -107,3 +107,9 @@ textarea {
   animation: backInRight 1s 1.2s;
   animation-fill-mode: forwards;
 }
+
+@media (max-width: 768px) {
+}
+
+@media (min-width: 769px) {
+}
