--- a/src/App.scss
+++ b/src/App.scss
@@ -35,3 +35,9 @@ textarea {
   animation: fadeOut 1s 1s;
   animation-fill-mode: forwards;
 }
+
+@media (max-width: 768px) {
+}
+
+@media (min-width: 769px) {
+}
