--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -85,31 +85,26 @@ textarea {
   animation: fadeIn 1s 1.5s;
   animation-fill-mode: forwards;
 
+
   span {
     font-size: 16px;
     display: block;
     padding-top: 20px;
     color: #ffd700;
+    margin-top: 5%;
   }
 }
 
 .map-wrap {
-  background: rgba(11, 255, 218, 0.1);
   float: right;
-  width: 53%;
+  width: 50%;
 }
 
 .leaflet-container {
-  width: 750px;
+  width: 700px;
   height: 400px;
   opacity: 0;
   position: static;
   animation: backInRight 1s 1.2s;
   animation-fill-mode: forwards;
-}
-
-@media (max-width: 768px) {
-}
-
-@media (min-width: 769px) {
 }
