--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -19,6 +19,11 @@
   font-family: 'La Belle Aurore';
 }
 
+.top-tag-html {
+  margin-left: -20px;
+  top: 0;
+}
+
 .bottom-tag-html {
   margin-left: -20px;
 }
@@ -61,7 +66,7 @@ img {
       font-weight: 400;
       margin-top: 0;
       position: relative;
-      margin: 12px;
+      margin: auto;
       left: -10px;
 
       &:before {
@@ -97,6 +102,7 @@ img {
       font-weight: 400;
       min-width: fit-content;
       animation: fadeIn 1s backwards;
+      margin-top: 5%;
 
       &:nth-last-of-type(2) {
         animation-delay: 2.3s
