--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -26,7 +26,7 @@
     nav {
       display: block;
       text-align: center;
-      position: absolute;
+      position: relative;
       height: 210px;
       top: 50%;
       margin-top: -120px;
@@ -129,9 +129,4 @@
     }
   }
   
-  @media (max-width: 768px) {
-  }
-  
-  @media (min-width: 769px) {
-  }
   
