--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@ $primary-color: #ffd700;
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url('./assets/fonts/helvetica-neu.ttf') format('truetype'); // Change 'ttf' to 'truetype'
+  src: url('./assets/fonts/helvetica-neu.ttf') format('ttf');
 }
 
 @font-face {
