--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -15,7 +15,7 @@
       display: block;
       position: relative;
       opacity: 0;
-      animation: fadeInUp 2s 3.2s;
+      animation: fadeInUp 2s 2.5s;
       animation-fill-mode: forwards;
       clear: both;
     }
@@ -43,6 +43,7 @@ input[type='email'] {
   color: #fff;
   padding: 0 20px;
   box-sizing: border-box;
+  border-radius: 10px;
 }
 
 textarea {
@@ -55,6 +56,7 @@ textarea {
   padding: 20px;
   min-height: 150px;
   box-sizing: border-box;
+  border-radius: 10px 10px 10px 10px;
 }
 
 .flat-button {
@@ -84,6 +86,8 @@ textarea {
   opacity: 0;
   animation: fadeIn 1s 1.5s;
   animation-fill-mode: forwards;
+  border-radius: 10px 10px 10px 10px;
+
 
 
   span {
@@ -98,6 +102,7 @@ textarea {
 .map-wrap {
   float: right;
   width: 50%;
+  border-radius: 10px 10px 10px 10p;
 }
 
 .leaflet-container {
