--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -90,9 +90,9 @@
         }
       }
   
-      a.portfolio-link {
+      a.my-projects{
         &:after {
-          content: 'PORTFOLIO';
+          content: 'PROJECTS';
         }
       }
   
