--- a/src/components/Home/Logo/index.scss
+++ b/src/components/Home/Logo/index.scss
@@ -1,33 +1,35 @@
 .logo-container {
-    z-index: -1;
-    width: 550px;
-    height: 600;
-    opacity: 0;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 10%;
-    margin: auto;
-  
-    .solid-logo {
-      position: absolute;
-      top: 3%;
-      right: auto;
-      bottom: 0;
-      left: 0;
-      margin: auto;
-      width: 550px;
-      height: 500px;
-      opacity: 0;
-      transform: rotateZ(25deg) !important;
-      z-index: 1;
-    }
-  }
-  
+  margin-left: 50%;
+  z-index: 1;
+  opacity: 0.3;
+}
 
-  @media (max-width: 768px) {
+.logo-container svg {
+  transform: rotate(25deg);
+}
+
+svg path {
+  stroke-dashoffset: 3500;
+  stroke-dasharray: 3500;
+  animation: draw 20s linear infinite;
+}
+
+svg g {
+  fill-opacity: 0;
+  animation: fill-in 20s forwards infinite;
+}
+
+@keyframes draw {
+  0% {
+    stroke-dashoffset: 13000;
   }
-  
-  @media (min-width: 769px) {
+  100% {
+    stroke-dashoffset: 0;
   }
-  
+}
+
+@keyframes fill-in {
+  to {
+    fill-opacity: 0.4;
+  }
+}
