--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -30,6 +30,11 @@
     animation: fadeIn 1s 1.8s backwards;
 }
 
+.text-animate-hover-about {
+    &:hover {
+        color: #fff;
+    }
+  }
 .face1 {
     transform: rotateY(0deg) translateZ(100px);
 }
