--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -37,10 +37,10 @@ input[type='text'],
 input[type='email'] {
   width: 100%;
   border: 0;
-  background: #0a4464;
+  background: #fff;
   height: 50px;
   font-size: 16px;
-  color: #fff;
+  color: #0a4464;
   padding: 0 20px;
   box-sizing: border-box;
   border-radius: 10px;
@@ -49,10 +49,10 @@ input[type='email'] {
 textarea {
   width: 100%;
   border: 0;
-  background: #0a4464;
+  background: #fff;
   height: 50px;
   font-size: 16px;
-  color: #fff;
+  color: #0a4464;
   padding: 20px;
   min-height: 150px;
   box-sizing: border-box;
@@ -68,16 +68,19 @@ textarea {
   text-decoration: none;
   padding: 8px 10px;
   border: 1px solid #ffd700;
-  float: right;
+  position: relative;
   border-radius: 4px;
+  left: 247%;
+  animation: fadeIn 2s 0s;
+  animation-fill-mode: forwards;
 }
 
 .info-map {
-  position: absolute;
+  position: relative;
   background-color: #000;
-  bottom: 50px;
-  right: 20%;
-  z-index: 999999;
+  top: 80%;
+  left: 50%;
+  z-index: 1;
   width: 267px;
   padding: 20px;
   color: #fff;
@@ -85,25 +88,23 @@ textarea {
   font-size: 17px;
   font-weight: 300;
   opacity: 0;
-  animation: fadeIn 1s 1.5s;
+  animation: backInRight 2s 3.5s;
   animation-fill-mode: forwards;
-  border-radius: 10px 10px 10px 10px;
-
-
+  border-radius: 10px;
 
   span {
     font-size: 16px;
     display: block;
-    padding-top: 20px;
     color: #ffd700;
-    margin-top: 5%;
   }
 }
 
 .map-wrap {
   float: right;
   width: 50%;
-  border-radius: 10px 10px 10px 10p;
+  border-radius: 10px;
+  animation: backInRight 1s 1.5s;
+  animation-fill-mode: forwards;
 }
 
 .leaflet-container {
@@ -111,7 +112,46 @@ textarea {
   height: 400px;
   opacity: 0;
   position: static;
-  animation: backInRight 1s 1.2s;
+  animation: backInRight 2s 2.5s;
   animation-fill-mode: forwards;
   border-radius: 10px;
 }
+
+.text-animate-hover-contact {
+  &:hover {
+      color: #fff;
+  }
+}
+
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes backInRight {
+  from {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
