--- a/src/components/Projects/index.scss
+++ b/src/components/Projects/index.scss
@@ -73,6 +73,8 @@
 .projectItem h3 {
   font-size: 25px;
   color: #ffd700;
+  font-family: 'Coolvetica';
+  font-weight: 500;
 }
 
 .text-animate-hover-projects {
