--- a/src/components/Home/Logo/index.scss
+++ b/src/components/Home/Logo/index.scss
@@ -1,7 +1,19 @@
 .logo-container {
-  margin-left: 50%;
-  z-index: 1;
-  opacity: 0.3;
+  position: fixed;
+  left: 50%;
+  top: 0;
+  z-index: -999;
+  opacity: 0; 
+  animation: fade-in 2s 2s forwards;
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0.3;
+  }
 }
 
 .logo-container svg {
@@ -30,6 +42,6 @@ svg g {
 
 @keyframes fill-in {
   to {
-    fill-opacity: 0.4;
+    fill-opacity: 0.3;
   }
 }
