--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -105,10 +105,11 @@ img {
     }
 
     p {
-      font-style: 13px;
+      font-style: 40px;
+      line-height: 1.5;
       color: #fff;
       font-family: sans-serif;
-      font-weight: 400;
+      font-weight: 100px;
       min-width: fit-content;
       animation: fadeIn 1.5s backwards;
       margin-top: 5%;
