--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -110,6 +110,8 @@ textarea {
   border-radius: 10px;
   animation: backInRight 1s 1.5s;
   animation-fill-mode: forwards;
+  position: absolute;
+  margin-left: 50%;
 }
 
 .leaflet-container {
@@ -120,6 +122,7 @@ textarea {
   animation: backInRight 2s 2.5s;
   animation-fill-mode: forwards;
   border-radius: 10px;
+  position: fixed;
 }
 
 .text-animate-hover-contact {
