--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -124,7 +124,7 @@ textarea {
   animation: backInRight 2s 2.5s;
   animation-fill-mode: forwards;
   border-radius: 10px;
-  position: fixed;
+  position: absolute;
 }
 
 .text-animate-hover-contact {
